@@ -1,3 +1,7 @@
+Tag: tags/2017-04-19
+---------------------
+- p-139: Deleted page--front.tpl.php for new homepage using paragraphs
+
 Tag: tags/2017-03-30
 ---------------------
 - p-86: Producers carousel
